Add files for intelligent executor and modify function app
